<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/note_delete"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_centerVertical="true"
        android:elevation="1dp"
        android:visibility="gone"
        android:src="@drawable/delete"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_toRightOf="@+id/note_delete"
        android:layout_margin="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:cardPreventCornerOverlap="false">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/user_img"
            android:layout_width="50dp"
            android:layout_centerVertical="true"
            android:layout_height="50dp"
            android:src="@drawable/user_image">

        </ImageView>
        <LinearLayout
            android:id="@+id/userlyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_toRightOf="@+id/user_img"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/note_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1.5"
                android:padding="2dp"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="12dp"
                tools:ignore="TextSizeCheck" />

            <LinearLayout
                android:id="@+id/star_lyt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_weight="1"
                android:layout_marginTop="1dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:src="@drawable/ic_star_empty" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_star_empty" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_star_empty"  />

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_star_empty"  />

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_star_empty"  />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userlyt"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/user_img"
            android:padding="2dp"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="12dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/gender_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_text"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/user_img"
            android:padding="2dp"
            android:text="@string/gender"
            android:textColor="@android:color/black"
            android:textSize="12dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/btech_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender_text"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/user_img"
            android:padding="2dp"
            android:text="@string/btech"
            android:textColor="@android:color/black"
            android:textSize="12dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/dob_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btech_text"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/user_img"
            android:padding="2dp"
            android:text="@string/dob1"
            android:textColor="@android:color/black"
            android:textSize="12dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/datetime_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dob_text"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/user_img"
            android:padding="2dp"
            android:text="@string/datetime"
            android:textColor="@android:color/black"
            android:textSize="12dp"
            tools:ignore="TextSizeCheck" />
    </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>