<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_note_background"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".AddUsersActivity">


    <LinearLayout
        android:id="@+id/add_note_window_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:layout_margin="10dp"
            android:text="@string/String1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/add_note_text_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_lyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/txt_color"
                    android:textSize="10dp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/String2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_note_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:inputType="textMultiLine"
                        android:textColor="@color/lightgray"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emali_lyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username_lyt"
                    android:layout_marginStart="10dp"
                    app:hintTextColor="@color/txt_color"
                    android:textSize="10dp"
                    android:hint="@string/String3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_email_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:inputType="textMultiLine"
                        android:textColor="@color/lightgray"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/gender_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/emali_lyt"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/String4"
                    android:textColor="@color/txt_color"
                    android:textSize="10dp"
                    tools:ignore="TextSizeCheck" />
                <LinearLayout
                    android:id="@+id/gender_lyt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:weightSum="3"
                    android:layout_marginStart="40dp"
                    android:orientation="horizontal"
                    android:layout_below="@id/gender_textview"
                    >
                    <ImageView
                        android:id="@+id/vector_image_view"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_weight="0.5"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/ic_male" />

                    <Button
                        android:id="@+id/maleButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:textColor="@color/lightgray"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/femaleButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textColor="@color/lightgray"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <TextView
                    android:id="@+id/btech_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gender_lyt"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/btech_passout_year"
                    android:textColor="@color/txt_color"
                    android:textSize="10dp"
                    tools:ignore="TextSizeCheck" />

                <Spinner
                    android:id="@+id/spinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btech_textview"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/Dob_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spinner"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/dob"
                    android:textColor="@color/txt_color"
                    android:textSize="10dp"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/DOB_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Dob_textview"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:drawableEnd="@drawable/ic_dobpicker"
                    android:hint="@string/select_dob_date"
                    android:inputType="textMultiLine"
                    android:textColor="@color/lightgray"
                    android:textSize="12dp"
                    tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/Dateandtime_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/DOB_edittext"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/date_and_time"
                    android:textColor="@color/lighttextcolor"
                    android:textSize="10dp"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/dateandtime_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Dateandtime_textview"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:drawableEnd="@drawable/ic_dobpicker"
                    android:hint="@string/select_date_and_time"
                    android:minHeight="48dp"
                    android:textColor="@color/lightgray"
                    android:textSize="12dp"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/ratingme_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dateandtime_edittext"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/how_do_you_rate_your_self"
                    android:textColor="@color/lighttextcolor"
                    android:textSize="10dp"
                    tools:ignore="TextSizeCheck" />

                <LinearLayout
                    android:id="@+id/star_lyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_below="@id/ratingme_textview"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/star1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:src="@drawable/ic_star_empty" />

                    <ImageView
                        android:id="@+id/star2"
                        android:layout_width="0dp"
                        android:layout_weight="0.25"
                        android:layout_height="15dp"
                        android:src="@drawable/ic_star_empty" />

                    <ImageView
                        android:id="@+id/star3"
                        android:layout_width="0dp"
                        android:layout_weight="0.25"
                        android:layout_height="15dp"
                        android:src="@drawable/ic_star_empty"  />

                    <ImageView
                        android:id="@+id/star4"
                        android:layout_width="0dp"
                        android:layout_weight="0.25"
                        android:layout_height="15dp"
                        android:src="@drawable/ic_star_empty"  />

                    <ImageView
                        android:id="@+id/star5"
                        android:layout_width="0dp"
                        android:layout_weight="0.25"
                        android:layout_height="15dp"
                        android:src="@drawable/ic_star_empty"  />

                </LinearLayout>

                <TextView
                    android:id="@+id/howdoyourate_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/star_lyt"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/how_do_you_rate_your_self_1_to_6"
                    android:textColor="@color/lighttextcolor"
                    android:textSize="10dp"
                    tools:ignore="TextSizeCheck" />
                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/howdoyourate_textview"
                    android:weightSum="5"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:text="1"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:text="2"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:text="3"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:text="4"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:text="5"
                        tools:ignore="TouchTargetSizeCheck" />

                </RadioGroup>

                <Button
                    android:id="@+id/add_note_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="357dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/radio_group"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/note_button_bg_layout"
                    android:text="Save"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </ScrollView>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>